--- a/CV.Rmd
+++ b/CV.Rmd
@@ -31,11 +31,10 @@ knitr::opts_chunk$set(echo = FALSE)
 # end of the new line
 
 # Things to add
-  # - ESA
   # - If funded, Farm Bill trapping grant
 
 # Adjusts to .tex
-  # - Add `\\` (without `) after each \detaileditem full entry but only if they DON'T have a \empty preceeding them to fix the spacing issues
+  # - Add `\\` (without `) after each \detaileditem full entry but only if they DON'T have a \empty preceeding them to fix the spacing issues. Do a  ctrl + f for "}\detaileditem" and replace with "\\}\detaileditem" so long as it isn't preceeded by \empty
 ```
 
 
@@ -67,39 +66,55 @@ bibliography_entries("bibs/publications.bib") %>%
 # Invited Presentations
   
   1. Wittman, JT, RA Nicoll, SW Myers, PH Chaloux, and BH Aukema (2019). _What You Eat Affects How You Move: Links Between Caterpillar Behavior and Gypsy Moth Management._ Oral presentation at the Annual Gypsy Moth Review, November 5 - 7, Seattle, WA.
-  2. Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _I Would Walk 500 Miles: Orientation and Movement Potential of Gypsy Moth Larvae in a Simulated Lumber Yard._ Oral presentation at the Annual Gypsy Moth Review, October 25 – 27, Columbus, OH.
+  2. Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _Evaluating the effectiveness of buffer zone practices in preventing the spread of gypsy moth (Lymantria dispar)._ Gypsy Moth Program Advisory Committee Meeting, November 22, St. Paul, MN.
+  3. Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _I Would Walk 500 Miles: Orientation and Movement Potential of Gypsy Moth Larvae in a Simulated Lumber Yard._ Oral presentation at the Annual Gypsy Moth Review, October 25 – 27, Columbus, OH.
 
 # Contributed Presentations
 
-  1. Wittman, JT (2019). _Replicability and open science in entomology._ Oral presentation given at the Department of Entomology, University of Minnesota, October 22, St. Paul, MN.
-  2. Wittman, JT, JJ Duan, RC Venette, and BH Aukema (2019). _Effect of cooling rate on survival of Spathius galinae when exposed to sub-zero temperatures._ Oral presentation at the North Central Forest Pest Workshop, September 23 - 26, Lisle, IL.
-  3. Wittman, JT, and BH Aukema (2018). _Effects of host foliage on the movement behavior of larvae of gypsy moth (Lymantria dispar)._ Oral presentation at the Entomological Society of America, Annual Meeting, November 11 – 14, Vancouver, British Columbia, Canada.
-  4. Wittman, JT, PH Chaloux, SW Myers, and BH Aukema (2018). _Keeping gypsy moth where they are: Investigating how far gypsy moth larvae can move._ Oral presentation at the Western Forest Insect Work Conference, March 26 - 29, Denver, CO.
-  5. Wittman, JT, PH Chaloux, SW Myers, and BH Aukema (2018). _Developing science to support practice: Determining distances required to protect log decks from wandering gypsy moth larvae._ Poster presentation at the USDA Interagency Forum on Invasive Species, January 9 – 12, Annapolis, MD.
-  6. Wittman, JT, SW Myers, PH Chaloux, and BH Aukema (2017). _Evaluating gypsy moth (Lymantria dispar) larval movement potential and effective barriers limiting their movement._ Oral presentation at the Entomological Society of America, Annual Meeting, November 5 – 8, Denver, CO.
-  7. Wittman, JT, SW Myers, PH Chaloux, and BH Aukema (2017). _Supporting policy with science: Are buffer zones around wood products effective at preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the International Union of Forest Research Organizations - Forest Insects and Pathogens in a Changing Environment: Ecology, Monitoring, and Genetics, September 11 – 15, Thessaloniki, Greece.
-  8. Wittman, JT, PH Chaloux, D Lance, SW Myers, and BH Aukema (2016). _Evaluating the effectiveness of buffer zone practices in preventing the spread of gypsy moth (Lymantria dispar)._ Oral presentation at the Gypsy Moth Program Advisory Committee Meeting, November 22, St. Paul, MN.
-  9. Nicoll, RA, JT Wittman, SW Myers, D Lance, and BH Aukema (2016). _Do buffer zones prevent the spread of gypsy moth (_Lymantria dispar_) larvae?_ Poster presentation at the Upper Midwest Invasive Species Conference, October 16-19, La Crosse, WI.
-  10. Wittman, J., E Stivers, and KJ Larsen (2016). _Bees, Butterflies and Beetles: A Comparison of Remnant and Planted Prairies in Northeast Iowa._ Oral presentation at the Day of Insects, April 9, Ames, IA.
-  11. Stivers, E, JT Wittman, and KJ Larsen (2015). _A comparison of adult butterfly communities on remnant and planted prairies in Northeast Iowa._ Poster presentation at Entomological Society of America, 63rd Annual Meeting. November 14 – 18, Minneapolis, NM.
-  12. Wittman, JT, A Weckwerth, and J Enos-Berlage (2012). _Exploring the Dry Run Creek Watershed: Molecules, Microbes, and Macroinvertebrates._ Poster presentation at the Iowa Water Conference. March.
+  1. Wittman JT, K Parker, KL Ryall, PJ Silk, and BH Aukema (2019). _Using Bayesian statistical methods to estimate the effective attraction radius of a short-range sex pheromone of emerald ash borer in baited traps._ Entomological Society of America National Meeting, November 17 - 20, St. Louis, MO. 
+  2. Wittman, JT (2019). _Replicability and open science in entomology._ Department of Entomology, University of Minnesota, October 22, St. Paul, MN.
+  3. Wittman, JT, JJ Duan, RC Venette, and BH Aukema (2019). _Effect of cooling rate on survival of Spathius galinae when exposed to sub-zero temperatures._ North Central Forest Pest Workshop, September 23 - 26, Lisle, IL.
+  4. Wittman, JT, and BH Aukema (2018). _Effects of host foliage on the movement behavior of larvae of gypsy moth (Lymantria dispar)._ Entomological Society of America National Meeting, November 11 – 14, Vancouver, British Columbia, Canada.
+  5. Wittman, JT, PH Chaloux, SW Myers, and BH Aukema (2018). _Keeping gypsy moth where they are: Investigating how far gypsy moth larvae can move._ Western Forest Insect Work Conference, March 26 - 29, Denver, CO.
+  6. Wittman, JT, SW Myers, PH Chaloux, and BH Aukema (2017). _Evaluating gypsy moth (Lymantria dispar) larval movement potential and effective barriers limiting their movement._ Entomological Society of America National Meeting, November 5 – 8, Denver, CO.
+  7. Wittman, JT, SW Myers, PH Chaloux, and BH Aukema (2017). _Supporting policy with science: Are buffer zones around wood products effective at preventing the spread of gypsy moth (Lymantria dispar)._ International Union of Forest Research Organizations - Forest Insects and Pathogens in a Changing Environment: Ecology, Monitoring, and Genetics, September 11 – 15, Thessaloniki, Greece.
+  8. Nicoll, RA, JT Wittman, SW Myers, D Lance, and BH Aukema (2016). _Do buffer zones prevent the spread of gypsy moth (_Lymantria dispar_) larvae?_ Upper Midwest Invasive Species Conference, October 16-19, La Crosse, WI.
+  9. Wittman, JT, E Stivers, and KJ Larsen (2016). _Bees, Butterflies and Beetles: A Comparison of Remnant and Planted Prairies in Northeast Iowa._ Day of Insects, April 9, Ames, IA.
+
+  
+# Poster Presentations
+  1. Hallinen, MJ, AM Kees, JL Schultz, JT Wittman, and BH Aukema (2019). _Prey diversity of foraging Cerceris fumipennis Say (Hymenoptera: Crabronidae) and factors influencing buprestid diversity and species distributions in Minnesota._ Entomological Society of America National Meeting, November 17 - 20, St. Louis, MO.
+  2. Wittman, JT, PH Chaloux, SW Myers, and BH Aukema (2018). _Developing science to support practice: Determining distances required to protect log decks from wandering gypsy moth larvae._ USDA Interagency Forum on Invasive Species, January 9 – 12, Annapolis, MD.
+  3. Stivers, E, JT Wittman, and KJ Larsen (2015). _A comparison of adult butterfly communities on remnant and planted prairies in Northeast Iowa._ Entomological Society of America National Meeting, 63rd Annual Meeting. November 14 – 18, Minneapolis, NM.
+  4. Wittman, JT, A Weckwerth, and J Enos-Berlage (2012). _Exploring the Dry Run Creek Watershed: Molecules, Microbes, and Macroinvertebrates._ Iowa Water Conference. March.
+
 
 # Teaching Experience
 ```{r}
 tribble(
   ~ role, ~ company, ~ loc, ~ dates, ~ details,
+  "Teaching Assistant", "University of Minnesota", "St. Paul, MN", "Jan. 2020 - May 2020", "Spatial and Temporal Analyses (ENT 5126)",
+  
   "Guest Lecturer", "University of Minnesota", "St. Paul, MN", "Sept. 2019", "Forest Entomology (ENT 4251)",
   
   "Teaching Assistant", "University of Minnesota", "St. Paul, MN", "Sept. 2018 - Dec. 2018", "Insect Biology (ENT 1005)",
   
   "Science Teacher", "DREAM Technical Academy", "Willmar, MN", "Jun. 2014 - Jun. 2016", "Grades 7 - 12",
+  
   "Long-Term Substitute - Biology", "Faribault High School", "Faribault, MN", "Feb. 2014 - Apr. 2014", "Biology (Grade 11)",
+  
    "Long-Term Substitute - Biology", "Faribault High School", "Faribault, MN", "Feb. 2014 - Apr. 2014", "Integrated Life Science (Grade 9)",
+  
   "Tutor", "Huntington Learning Center", "Plymouth, MN", "Oct. 2013 - Aug. 2014", "Science (Grades 6 - 12)",
+  
   "Tutor", "Huntington Learning Center", "Plymouth, MN", "Oct. 2013 - Aug. 2014", "Math (Grades 6 - 12)",
+  
   "Tutor", "Huntington Learning Center", "Plymouth, MN", "Oct. 2013 - Aug. 2014", "ACT (Grades 11 - 12)",
+  
   "Student Teacher", "Edina High School", "Edina, MN", "Oct. 2013 - Dec. 2013", "Biology (Grade 11)",
+  
   "Student Teacher", "Edina High School", "Edina, MN", "Oct. 2013 - Dec. 2013", "AP Biology (Grade 12)",
+  
   "Student Teacher", "Stillwater Junior High", "Stillwater, MN", "Aug. 2013 - Oct. 2013", "Life Sciences (Grade 7)"
 ) %>% 
   detailed_entries(role, dates, company, loc, details)
